<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Main3Activity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#69BD76"
            android:background="@drawable/layout_principal_curvasabajo"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/reg" />

            <TextView
                android:id="@+id/txtRegis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-10dp"
                android:text="@string/agregar_usuario"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/light_texts_color"
                android:textSize="26dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nom_apell"
            android:textColor="#535353"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edNom"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/txtregistro"
            android:hint="@string/nom_apell_hint"
            android:padding="8dp"
            android:layout_marginTop="2dp"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textColor="#535353"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edUser"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/txtregistro"
            android:hint="@string/email_hint"
            android:padding="8dp"
            android:layout_marginTop="2dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/contraseña"
            android:textColor="#535353"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edPass"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/txtregistro"
            android:ems="10"
            android:hint="@string/contraseña_hint"
            android:inputType="textPassword"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtRpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/re_contraseña"
            android:textColor="#535353"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edRPass"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/txtregistro"
            android:ems="10"
            android:hint="@string/re_contraseña_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginTop="2dp"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btnReg"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/curvas_rojas"
            android:drawableLeft="@drawable/ic_person_add_black_24dp"
            android:drawablePadding="-46dp"
            android:paddingLeft="25dp"
            android:text="@string/registrarse"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/degradereglayoutprin"
            android:text="@string/cancelar"
            android:textColor="#535353"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>