<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lyPrin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/principal_color"
        android:background="@drawable/layout_principal_curvasabajo"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtJP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="JopiPedia"
            android:textColor="@color/nocturne"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imgClass"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="-4dp"
            app:srcCompat="@drawable/logotipo1" />


    </LinearLayout>
    <TextView
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/serv_en_des"
        android:textColor="@color/gray_texts_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="#535353"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edUser"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/curves"
        android:hint="@string/email_hint"
        android:padding="8dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/contraseña"
        android:textColor="#535353"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/curves"
        android:ems="10"
        android:hint="@string/contraseña_hint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="15sp" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

            <Button
                android:id="@+id/btnInic"
                android:layout_width="200dp"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/nocturne"
                android:background="@drawable/button_rouned"
                android:drawableLeft="@drawable/iniciaricon"
                android:drawablePadding="-40dp"
                android:paddingLeft="20dp"
                android:text="@string/iniciar_sesion"
                android:textColor="#fff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#4A4A4A"
            android:textSize="13sp"
            android:text="@string/no_cuenta">

        </TextView>


            <Button
                android:id="@+id/btnReg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curvas_rojas"
                android:drawableLeft="@drawable/ic_person_add_black_24dp"
                android:drawablePadding="-40dp"
                android:paddingLeft="20dp"
                android:text="@string/registrarse"
                android:layout_marginTop="8dp"
                android:textColor="#fff"
                android:textSize="14sp"
            />


        </LinearLayout>

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_info"
        android:layout_marginTop="50dp"/>

</LinearLayout>