<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiologiaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/lyPrin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal_color"
        android:background="@drawable/layout_principal_curvasabajo"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnVolver"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/arrow_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/bio"
                style="bold"
                android:textColor="@color/light_texts_color"
                android:textSize="30sp" />


            <ImageView
                android:id="@+id/img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="-2dp"
                app:srcCompat="@drawable/bio_dna_128" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">



        </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/txtEnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toque_boton_iniciar"
            android:textColor="#996A6A6A"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <LinearLayout

            android:id="@+id/lybuttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="252dp"
                android:layout_height="233dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btnplaybio"
                android:drawableTop="@drawable/play_circle"
                android:drawablePadding="-20dp"
                android:paddingTop="20dp"
                android:text="@string/comenzar"
                android:textColor="#fff"
                android:textSize="18sp">

            </Button>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>