<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_texts_color"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:backgroundTint="@color/nocturne"
            android:background="@drawable/layout_principal_curvasabajo"
            android:gravity="center_horizontal"
            android:orientation="vertical">


                    <ImageView
                        android:id="@+id/btnVolver"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/back_new"
                        />

            <ImageView
                android:id="@+id/imgUser1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/account_200p" />

            <TextView
                android:id="@+id/txtNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:text="-"
                android:layout_below="@+id/imgUser1"
                android:layout_centerInParent="true"
                android:textColor="@color/principal_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="-"
                android:layout_below="@+id/txtNom"
                android:layout_centerInParent="true"
                android:textColor="@color/principal_color"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="70dp"
                android:layout_height="37dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentRight="true"

                android:background="@drawable/degradereglayoutprin"
                android:drawableLeft="@drawable/logoutblack"
                android:drawablePadding="-12dp"
                android:paddingStart="4dp"
                android:paddingEnd="-6dp"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/light_texts_color"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_light_curvasabajo"
                android:backgroundTint="@color/light_texts_color"
                android:gravity="center_horizontal"
                android:layout_below="@+id/txtUser"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingEnd="6dp"
                    android:text="@string/total_puntos"
                    android:textColor="@color/nocturne"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/PointsTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0000"
                    android:textColor="@color/nocturne"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIconTint="@color/nocturne"
            app:tabIndicatorColor="@color/nocturne"
            app:tabSelectedTextColor="@color/nocturne"
            app:tabTextColor="#99B3B3B3">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/mis_puntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntuacion" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/mis_apuntes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apuntes" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>